[package]
name = "rashen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rashen"
path = "src/lib.rs"

[[bin]]
name = "rashen"
path = "src/main.rs"

[dependencies]
eyre = "0.6.8"
flate2 = "1.0"
nom = "7.1.3"

[dev-dependencies]
bytemuck = "1.13.1"

