[package]
name = "rashen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rashen"
path = "src/lib.rs"

[[bin]]
name = "rashen"
path = "src/main.rs"

[dependencies]
colored = "2.0.0"
flate2 = "1.0"
miette = { version = "5.5.0", features = ["fancy"] }
nom = "7.1.3"
nom-supreme = "0.8.0"
thiserror = "1.0.38"

[dev-dependencies]
bytemuck = "1.13.1"
eyre = "0.6.8"

